too_long_to_read.css
@import url("reset.css");
 
/***** Global *****/
/* Body */
  body {
    background: #C0C0C0 url('images/gray.jpg');
    color: #000305;
    font-size: 87.5%; /* Base font size: 14px */
    font-family: 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    line-height: 1.429;
    margin: 0;
    padding: 0;
    text-align: left;
    background-attachment: fixed;
  }
 
/* Headings */
h2 {font-size: 1.571em} /* 22px */
h3 {font-size: 1.429em} /* 20px */
h4 {font-size: 1.286em} /* 18px */
h5 {font-size: 1.143em} /* 16px */
h6 {font-size: 1em} /* 14px */

h2 {
  font-weight: 400;
  line-height: 1.1;
  margin-bottom: .8em;
  text-align: center;
  color: #1ab188;
  text-decoration: underline;
}
h3, h4, h5, h6 {
  font-weight: 400;
  line-height: 1.1;
  margin-bottom: .8em;
}
 
/* Anchors */
a {outline: 0;}
a img {border: 0px; text-decoration: none;}
a:link, a:visited {
  color: #1ab188;
  padding: 0;
  text-decoration: none;
}
a:hover, a:active {
  text-decoration: underline;
}
 
/* Paragraphs */
p {margin-bottom: 1.143em;}
* p:last-child {margin-bottom: 0;}
 
strong, b {font-weight: bold;}
em, i {font-style: italic;}
 
::-moz-selection {background: #F6CF74; color: #fff;}
::selection {background: #F6CF74; color: #fff;}
 
/* Lists */
ul {
  list-style: outside disc;
  margin: 1em 0 1.5em 1.5em;
}
 
ol {
  list-style: outside decimal;
  margin: 1em 0 1.5em 1.5em;
}
 
dl {margin: 0 0 1.5em 0;}
dt {font-weight: bold;}
dd {margin-left: 1.5em;}
 
/* Quotes */
blockquote {font-style: italic;}
cite {}
 
q {}
 
/* Tables */
table {margin: .5em auto 1.5em auto; width: 98%;}
 
  /* Thead */
  thead th {padding: .5em .4em; text-align: left;}
  thead td {}
 
  /* Tbody */
  tbody td {padding: .5em .4em;}
  tbody th {}
 
  tbody .alt td {}
  tbody .alt th {}
 
  /* Tfoot */
  tfoot th {}
  tfoot td {}
 
 /***** Layout *****/
.body {clear: both; margin: 0 auto; width: 800px;}
img.right figure.right {float: right; margin: 0 0 2em 2em;}
img.left, figure.left {float: right; margin: 0 0 2em 2em;}

/*
  Header
*****************/
#banner {
  margin: 0 auto;
  padding: 2.5em 0 0 0;
}
 
  /* Banner */
  #banner h1 {font-size: 3.571em; line-height: .6;}
  #banner h1 a:link, #banner h1 a:visited {
    color: white; 
    display: block;
    font-weight: bold;
    margin: 0 0 .6em .2em;
    text-decoration: none;
    width: 427px;
  }
  #banner h1 a:hover, #banner h1 a:active {
    background: none;
    color: #1ab188;
    text-shadow: none;
  }
 
  #banner h1 strong {font-size: 0.36em; font-weight: normal;}

/* Main Nav */
  #banner nav {
    background: #000305;
    font-size: 1.143em;
    height: 40px;
    line-height: 30px;
    margin: 0 auto 2em auto;
    padding: 0;
    text-align: center;
    width: 800px;
    
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
  }
  
  #banner nav ul {list-style: none; margin: 0 auto; width: 800px;}
  #banner nav li {float: left; display: inline; margin: 0;}
  
  #banner nav a:link, #banner nav a:visited {
    color: #fff;
    display: inline-block;
    height: 30px;
    padding: 5px 1.5em;
    text-decoration: none;
  }
  #banner nav a:hover, #banner nav a:active,
  #banner nav .active a:link, #banner nav .active a:visited {
    background: #1ab188;
    color: #fff;
    text-shadow: none !important;
  }
  
  #banner nav li:first-child a {
    border-top-left-radius: 5px;
    -moz-border-radius-topleft: 5px;
    -webkit-border-top-left-radius: 5px;
    
    border-bottom-left-radius: 5px;
    -moz-border-radius-bottomleft: 5px;
    -webkit-border-bottom-left-radius: 5px;
  }

/*
  Featured
*****************/
#featured {
  background: #F0FFFF;
  margin-bottom: 2em;
  overflow: hidden;
  padding: 20px;
  width: 760px;
 
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}
 
#featured figure {
  border: 2px solid #eee;
  float: right;
  margin: 0.786em 2em 0 4.5em;
  width: 280px;
}
#featured figure img {display: block; float: right;}

#featured h3 {font-size: 1.429em; margin-bottom: .5em;}
 
#featured h3 a:link, #featured h3 a:visited {color: #000305; text-decoration: none;}
#featured h3 a:hover, #featured h3 a:active {color: #fff;}

/*
  GUI Content
*****************/
#guiContent {
  background: #F0FFFF;
  margin-bottom: 2em;
  overflow: hidden;
  padding: 20px;
  width: 760px;
 
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}
 
#guiContent figure {
  border: 2px solid #eee;
  margin: 0 auto;
  width: 716px;
}

#guiContent figure img {display: block;}

#guiContent h3 {font-size: 1.429em; margin-bottom: .5em;}
 
#guiContent h3 a:link, #guiContent h3 a:visited {color: #000305; text-decoration: none;}
#guiContent h3 a:hover, #guiContent h3 a:active {color: #fff;}
 
/*
  Body
*****************/
#content {
  background: #F0FFFF;
  margin-bottom: 2em;
  overflow: hidden;
  padding: 20px 20px;
  width: 760px;
 
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}
/*
  About
*****************/
#about {
  background: #F0FFFF;
  font-style: normal;
  margin-bottom: 2em;
  overflow: hidden;
  padding: 20px;
  text-align: left;
  width: 760px;
 
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}
 
#about .primary {float: left; width: 165px;}
#about .primary strong {color: #C64350; display: block; font-size: 1.286em;}
#about .url:link, #about .url:visited {text-decoration: none;}
#about .bio {float: right; width: 500px;}
 
 /*
  Footer
*****************/
#contentinfo {padding-bottom: 2em; text-align: right;}

/* Blog */
.hentry {
  border-bottom: 1px solid #eee;
  padding: 1.5em 0 0 0;
}
li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
#content > .hentry {padding: 1em 0;}
 
.entry-title {font-size: 1.143em; font-weight: bold; padding-top: .3em; margin-bottom: 0;}
.entry-title a:link, .entry-title a:visited {text-decoration: none;}
 
.hentry .post-info * {font-style: normal;}
 
  /* Content */
  .hentry footer {margin-bottom: 2em;}
  .hentry footer address {display: inline;}
  #posts-list footer address {display: block;}
 
  /* Blog Index */
  #posts-list {list-style: none; margin: 0;}
  #posts-list .hentry {padding-left: 152px; position: relative;}
  #posts-list footer {
    left: 10px;
    position: absolute;
    top: 1.5em;
    width: 140px;
  }
#posts-list .hentry:hover {
  background: #1ab188;
  color: #fff;
}
#posts-list .hentry:hover a:link, #posts-list .hentry:hover a:visited {
  color: #F6CF74;
  text-shadow: 1px 1px 1px #333;
}

.publication-img {
  border: solid 1px #CCC;
  -moz-box-shadow: 5px 5px 0px #999;
  -webkit-box-shadow: 5px 5px 0px #999;
  box-shadow: 5px 5px 0px #999;
}

